--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
 						<div class="navbar">
 						  <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>
-						  <a href="#hairA"><i class="fa fa-fw fa-search "></i> Hair Type 1</a>
-						  <a href="#hairB"><i class="fa fa-fw fa-envelope"></i> Hair Type 2</a>
-						  <a href="#hairC"><i class="fa fa-fw fa-user"></i> Hair Type 3</a>
-						  <a href="#hairD"><i class="fa fa-fw fa-user"></i> Hair Type 4</a>
+						  <a href="#hairA"></i> Hair Type 1</a>
+						  <a href="#hairB"></i> Hair Type 2</a>
+						  <a href="#hairC"></i> Hair Type 3</a>
+						  <a href="#hairD"></i> Hair Type 4</a>
 						    
 					    </div>
 
