--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			
 			</section>
 			
-			
+			<!--  Try not to use the center tag, use CSS to center your content instead -->
 	      	<center><section id="hairA" class="sections">
 
 	
@@ -82,7 +82,7 @@
 						    </div>
 				</section> </center>
 			
-			
+			<!-- Great use of semantic HTML tags such as article and section!!!  -->
 			   <center> <section id="hairC" class="sections">
 					
 					  <article>
